--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "vaimo/module-customer-intent-predictor",
+    "name": "sinhar/module-customer-intent-predictor",
     "description": "Predict visitor purchase intent (low / medium / high) in real time based on on-site actions.",
     "type": "magento2-module",
     "license": "proprietary",
@@ -15,12 +15,12 @@
             "src/registration.php"
         ],
         "psr-4": {
-            "Vaimo\\IntentPredictor\\": "src"
+            "SinhaR\\IntentPredictor\\": "src"
         }
     },
     "autoload-dev": {
         "psr-4": {
-            "Vaimo\\IntentPredictor\\Test\\": "test"
+            "SinhaR\\IntentPredictor\\Test\\": "test"
         }
     },
     "keywords": [
